[project]
name = "nonebot-plugin-skland-arksign"
version = "0.5.1"
description = "用于每日定时签到森空岛明日方舟的Nonebot插件"
authors = [
    {name = "GuGuMur", email = "222153315@qq.com"},
    {name = "Azide", email = "rukuy@qq.com"},
]
dependencies = [
    "nonebot2>=2.0.1",
    "nonebot-plugin-datastore>=1.1.0",
    "httpx>=0.24.1",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-plugin-send-anything-anywhere>=0.3.0",
    "nonebot-plugin-session>=0.1.0",
    "pydantic>=1.10.12",
    "nonebot-plugin-alconna>=0.25.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "isort>=5.12.0",
    "nb-cli>=1.2.3",
    "nonebot-adapter-onebot>=2.2.4",
]

[tool.nonebot]
plugins = ["nonebot_plugin_skland_arksign"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "E501", "C901", "PT023"]

line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
preview = true
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
length_sort = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_skland_arksign", "tests"]
extra_standard_library = ["typing_extensions"]
