[project]
name = "nonebot-plugin-skland-arksign"
version = "0.7.0"
description = "用于每日定时签到森空岛明日方舟的Nonebot插件"
authors = [
    {name = "GuGuMur", email = "222153315@qq.com"},
    {name = "Azide", email = "rukuy@qq.com"},
]
dependencies = [
    "nonebot2>=2.1.2",
    "httpx>=0.25.2",
    "pydantic>=1.10.13",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-plugin-alconna>=0.34.1",
    "nonebot-plugin-datastore>=1.1.2",
    "nonebot-plugin-session>=0.2.3",
    "nonebot-plugin-session-saa>=0.1.1",
    "nonebot-plugin-send-anything-anywhere>=0.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "isort>=5.13.2",
    "nb-cli>=1.2.8",
    "nonebot-adapter-onebot>=2.3.1",
]
test = [
    "nonebug>=0.3.5",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-xdist>=3.5.0",
]

[tool.nonebot]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
plugins = ["nonebot_plugin_skland_arksign"]
builtin_plugins = ["echo", "single_session"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "E501", "C901", "PT023"]

line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
preview = true
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
length_sort = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_skland_arksign", "tests"]
extra_standard_library = ["typing_extensions"]
